--- a/css/main.css
+++ b/css/main.css
@@ -43,10 +43,22 @@ d-flex{
     border-radius: 4px;
     cursor: pointer;
     transition: .3s;
+    outline: none;
 }
 
 .btn:hover{
     background-color: rgb(240, 240, 240);
+}
+
+
+.grid__col-4{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.grid__col-compnay{
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
 }
 
 .filled-btn{
@@ -55,6 +67,10 @@ d-flex{
     color: white;
     background-color: #F46752;
     font-size: 16px;
+}
+
+.text-center{
+    text-align: center;
 }
 
 .filled-btn:hover{
@@ -345,10 +361,9 @@ d-flex{
 }
 
 .quality-assurance__row{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 70px;
 }
+
 
 .quality-assurance__card{
     width: 100%;
@@ -360,6 +375,13 @@ d-flex{
     justify-content: center;
     align-items: center;
     background-color: #fff
+}
+
+.quality-assurance__card-img{
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .quality-assurance__card-title{
@@ -404,15 +426,79 @@ d-flex{
     text-align: center;
 }
 
+.insurance__info-subtitle{
+    font-size: 19px;
+    line-height: 30px;
+    color: #ACB4BF;
+    padding: 0 155px;
+}
+
 .insurance__info-title{
     padding: 30px 0 37px;
     color: white;
 }
+.insurance__pay{
+    position: relative;
+}
 
-.insurance__info-subtitle{
-    padding-bottom: 41px;
+.insurance__pay-step{
+    position: relative;
+    padding: 73px 0 32px;
+}
+
+.insurance__pay-step-title{
+    padding: 27px 0 8px;
+    color: white;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 22px;
+}
+.insurance__pay-step-desc{
+    font-size: 16px;
+    line-height: 26px;
     color: #ACB4BF;
-    padding: 0 155px 32px 155px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 56px;
+}
+
+.insurance__pay-step-number{
+    position: absolute;
+    top: 50px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.dash-img{
+    position: absolute;
+    top: 70px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.confetti{
+    position: absolute;
+    right: -170px;
+    top: -190px;
+    bottom: 0;
+    margin: auto;
+}
+
+.drop_1{
+    position: absolute;
+    top: 40px;
+    left: 60px;
+}
+
+.drop_2{
+    position: absolute;
+    left: -350px;
+    right: 0;
+    top: 50px;
+    margin: auto;
 }
 /* Стили секции "insurance" */
 
@@ -437,7 +523,7 @@ d-flex{
 
 .everything__img-badge{
     position: absolute;
-    padding: 20px 0 20px 25px;
+    padding: 20px 20px 20px 25px;
     background-color: #FFFFFF;
     box-shadow: 3px 4px 34px rgba(66, 71, 77, 0.11);
     border-radius: 5px;
@@ -455,7 +541,7 @@ d-flex{
 }
 
 .everything__info-subtitle{
-    padding-top: 24px 0;
+    padding: 24px 0;
 }
 /* Стили секции "everything" */
 
@@ -464,34 +550,31 @@ d-flex{
     padding: 160px 0 132px;
 }
 
+.posibility__card{
+    padding: 40px 7px 33px 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .posibility__row{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 20px;
 }
 
-.posibility__card{
-
-}
-
-.posibility__card-content{
-    padding: 40px 0 33px 22px;
-}
-
 .posibility__card-title{
     font-weight: 600;
     font-size: 34px;
     line-height: 42px;
-    padding-right: 20px;
+    height: 50px;
 }
 
 .posibility__card-info{
     padding: 65px 0 84px;
-    font-size: 16px;
+    font-size: 15px;
     line-height: 19px;
-}
-
-.posibility__card-subtitle{
 }
 
 .primary{
@@ -524,13 +607,19 @@ d-flex{
 }
 
 .get-started__info{
-    padding: 8px 39px;
+    padding: 8px 0 39px;
 }
 
-.get-started__content img{
+.get-started__content .umbrella-man{
     position: absolute;
-    top: -122px;
-    left: 120px;
+    bottom: -5px;
+    left: 110px;
+}
+
+.get-started__content .boy{
+    position: absolute;
+    bottom: -5px;
+    right: 250px;
 }
 /* Стили секции "get-started" */
 
@@ -538,4 +627,108 @@ d-flex{
 .footer{
     padding: 73px 0 40px;
 }
+
+.footer__content{
+    display: flex;
+}
+
+.footer__company{
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    padding-right: 240px;
+}
+
+.footer_social-links{
+    color:  #5A6482;
+    padding-top: 28px;
+}
+
+.footer_social-links a{
+    padding-right: 34px;
+}
+
+.footer__links{
+    width: 50%;
+}
+
+.footer__links-grid{
+    grid-column-gap: 30px;
+}
+
+.footter_links-title{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #1D253C;
+}
+
+.footer__link-items{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer__link-item{
+    width: 100%;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #5A6482;
+    margin-top: 22px;
+}
+.footer__company-info{
+    font-size: 14px;
+    line-height: 23px;
+    color: #5A6482;
+    padding: 33px 0 22px;
+}
+.footer__company-btn{
+    height: 60px;
+    border: none;
+    padding: 19px;
+    border-radius: 0px 5px 5px 0px;
+    color: white;
+    background-color: #126F85;
+    display: flex;
+    align-items: center;
+    outline: none;
+    cursor: pointer;
+}
+
+.footer__company-input{
+    width: 230px;
+    height: 60px;
+}
+
+.company_btn svg{
+    padding-left: 5px;
+}
 /* Стили "footer" */
+
+.footer_btn{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: #1D253C;
+}
+
+.copyright{
+    background-color: #F8F8F8;
+    padding: 30px 0;
+}
+
+.copyright__content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.copyright__content p{
+    font-size: 16px;
+    line-height: 19px;
+    color: #5A6482;
+}
+
